--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <meta name="термопанели" content="термопанели, initial-scale=1.0" content="Купить фасадный декор , initial-scale=1.0"">
     <title>Master decore</title>
     <link rel="stylesheet" href="style.css">
-                                           <meta name="yandex-verification" content="1e8fdbfbc0627f03" />
-                                                                                                  
+    <meta name="yandex-verification" content="1e8fdbfbc0627f03" />
+     <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(89237554, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/89237554" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->                                                                                             
 </head>
 <body>
     <header class="g">
